Add some basic examples